Meeting calculator now functioning

--- a/Cost2Meet/Cost2Meet.csproj
+++ b/Cost2Meet/Cost2Meet.csproj
@@ -48,6 +48,9 @@
     <Compile Include="Resources\FontResources.cs" />
     <Compile Include="Resources\PaddingResources.cs" />
     <Compile Include="Resources\SpacingResources.cs" />
+    <Compile Include="Business\CostCalculator.cs" />
+    <Compile Include="ErrorHandling\Cost2MeetLogger.cs" />
+    <Compile Include="ErrorHandling\InvalidDatesException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
@@ -65,6 +68,8 @@
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="Resources\" />
+    <Folder Include="Business\" />
+    <Folder Include="ErrorHandling\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MainPage.xaml">
