--- a/Cost2Meet/Android/packages.config
+++ b/Cost2Meet/Android/packages.config
@@ -3,4 +3,5 @@
   <package id="Xamarin.Android.Support.v13" version="20.0.0.4" targetFramework="MonoAndroid44" />
   <package id="Xamarin.Android.Support.v4" version="20.0.0.4" targetFramework="MonoAndroid44" />
   <package id="Xamarin.Forms" version="1.2.3.6257" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Insights" version="1.6.0" targetFramework="MonoAndroid44" />
 </packages>
