--- a/Cost2Meet/iOS/packages.config
+++ b/Cost2Meet/iOS/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Xamarin.Forms" version="1.2.3.6257" targetFramework="MonoTouch10" />
+  <package id="Xamarin.Insights" version="1.6.0" targetFramework="MonoTouch10" />
 </packages>
