--- a/Cost2Meet/Cost2Meet.csproj
+++ b/Cost2Meet/Cost2Meet.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Business\CostCalculator.cs" />
     <Compile Include="ErrorHandling\Cost2MeetLogger.cs" />
     <Compile Include="ErrorHandling\InvalidDatesException.cs" />
+    <Compile Include="Data\Cost2MeetRepository.cs" />
+    <Compile Include="Model\MeetingHistory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
@@ -79,6 +81,8 @@
     <Folder Include="Resources\" />
     <Folder Include="Business\" />
     <Folder Include="ErrorHandling\" />
+    <Folder Include="Data\" />
+    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MainPage.xaml">
